build/log/idf_py_stdout_output_51204
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/build/bootloader/esp-idf/esptool_py && /home/anh/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/anh/ProgramFile/esp32-idf/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/build/bootloader/bootloader.bin
Bootloader binary size 0x30c0 bytes. 0x4f40 bytes (62%) free.
[2/8] Building CXX object esp-idf/commandline/CMakeFiles/__idf_commandline.dir/commandline.cpp.obj
FAILED: esp-idf/commandline/CMakeFiles/__idf_commandline.dir/commandline.cpp.obj 
/home/anh/.espressif/tools/riscv32-esp-elf/esp-12.2.0_20230208/riscv32-esp-elf/bin/riscv32-esp-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-4726-gdf9310ada2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/build/config -I/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/newlib/platform_include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/freertos/esp_additions/include/freertos -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/freertos/esp_additions/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/freertos/esp_additions/arch/riscv/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_hw_support/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_hw_support/include/soc -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_hw_support/port/esp32c3/. -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_hw_support/port/esp32c3/private_include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/heap/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/log/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/soc/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/soc/esp32c3 -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/soc/esp32c3/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/hal/esp32c3/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/hal/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/hal/platform_port/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_rom/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_rom/include/esp32c3 -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_rom/esp32c3 -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_common/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_system/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_system/port/soc -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_system/port/include/riscv -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/esp_system/port/include/private -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/riscv/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/lwip/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/lwip/include/apps -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/lwip/include/apps/sntp -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/lwip/lwip/src/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/lwip/port/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/lwip/port/freertos/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/lwip/port/esp32xx/include -I/home/anh/ProgramFile/esp32-idf/esp-idf/components/lwip/port/esp32xx/include/arch -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3=. -fmacro-prefix-map=/home/anh/ProgramFile/esp32-idf/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu++20 -fno-exceptions -fno-rtti -MD -MT esp-idf/commandline/CMakeFiles/__idf_commandline.dir/commandline.cpp.obj -MF esp-idf/commandline/CMakeFiles/__idf_commandline.dir/commandline.cpp.obj.d -o esp-idf/commandline/CMakeFiles/__idf_commandline.dir/commandline.cpp.obj -c /home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp: In function 'cli_error_t get_json_object(char*, json*, char*)':
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:119:9: error: jump to label 'error'
  119 |         error:
      |         ^~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:82:22: note:   from here
   82 |                 goto error;
      |                      ^~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:111:26: note:   crosses initialization of 'int r_brace'
  111 |         int l_brace = 1, r_brace = 0;
      |                          ^~~~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:111:13: note:   crosses initialization of 'int l_brace'
  111 |         int l_brace = 1, r_brace = 0;
      |             ^~~~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:119:9: error: jump to label 'error'
  119 |         error:
      |         ^~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:73:22: note:   from here
   73 |                 goto error;
      |                      ^~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:111:26: note:   crosses initialization of 'int r_brace'
  111 |         int l_brace = 1, r_brace = 0;
      |                          ^~~~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:111:13: note:   crosses initialization of 'int l_brace'
  111 |         int l_brace = 1, r_brace = 0;
      |             ^~~~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:119:9: error: jump to label 'error'
  119 |         error:
      |         ^~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:68:22: note:   from here
   68 |                 goto error;
      |                      ^~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:111:26: note:   crosses initialization of 'int r_brace'
  111 |         int l_brace = 1, r_brace = 0;
      |                          ^~~~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:111:13: note:   crosses initialization of 'int l_brace'
  111 |         int l_brace = 1, r_brace = 0;
      |             ^~~~~~~
/home/anh/Projects/CODE/ESP_IDF/GatewayPlus_ESP32C3/components/commandline/commandline.cpp:61:25: warning: unused variable 'pend' [-Wunused-variable]
   61 |         char *pkstart, *pend, *vpstart;
      |                         ^~~~
ninja: build stopped: subcommand failed.
